@@ -220,7 +220,7 @@
             //bindAsCurrentUser = YES;
             bindDN = "PH_LDAP_ADMIN_DN";
             bindPassword = "PH_LDAP_ADMIN_PW";
-            filter = "objectClass=mailUser AND accountStatus=active AND enabledService=mail";
+            filter = "objectClass=mailUser AND accountStatus=active AND enabledService=mail AND enabledService=sogo";
             scope = SUB;
 
             // The algorithm used for password encryption when changing
