@@ -126,9 +126,14 @@ generate_sql()
         fi
 
         cat >> ${SQL} <<EOF
-INSERT INTO mailbox (username, password, name, storagebasedirectory,storagenode, maildir, quota, domain, active, local_part, created)
-    VALUES ('${mail}', '${CRYPT_PASSWD}', '${username}', '${STORAGE_BASE}','${STORAGE_NODE}', '${maildir}', '${DEFAULT_QUOTA}', '${DOMAIN}', '1','${username}', NOW());
-INSERT INTO alias (address, goto, domain, created, active) VALUES ('${mail}', '${mail}','${DOMAIN}', NOW(), 1);
+INSERT INTO mailbox (username, password, name,
+                     storagebasedirectory,storagenode, maildir,
+                     quota, domain, active, local_part, created)
+             VALUES ('${mail}', '${CRYPT_PASSWD}', '${username}',
+                     '${STORAGE_BASE}','${STORAGE_NODE}', '${maildir}',
+                     '${DEFAULT_QUOTA}', '${DOMAIN}', '1','${username}', NOW());
+INSERT INTO alias (address, goto, domain, created, active)
+           VALUES ('${mail}', '${mail}','${DOMAIN}', NOW(), 1);
 EOF
     done
 }
